--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -28,8 +28,8 @@
 
 .body-img {
   width: 100%;
-  transform: scale(.95);
-  border-radius: 50%;
+  transform: scale(1.2);
+  border-radius:60%;
 }
 
 .body-content {
@@ -38,13 +38,13 @@
 }
 
 .body-headline {
-  font-size: 3rem;
+  font-size: 4rem;
   padding-bottom: 1rem;
   color: white;
 }
 
 .body-text {
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding-bottom: 1rem;
   color: lightgray;
 }
@@ -53,7 +53,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  font-size: 2.8rem;
+  font-size: 3rem;
 }
 
 .body .icon-link {
