--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -1,5 +1,5 @@
 .projects {
-  background-color: #fcecfc;
+  background-color: #e9e9e9;
   height: 65vh;
   margin-top: -2rem;
 }
@@ -84,8 +84,8 @@
 .project-button:hover,
 .project-button:active,
 .project-button:focus{
-  background-color: #ef233c;
-  border-color: #ef233c;
+  background-color: grey;
+  border-color: grey;
   color: white;
 }
 @media (min-width: 500px) and (max-width: 650px) {
