--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -80,6 +80,8 @@
   border: 1px solid rgba(30, 39, 46, 0.7);
   border-radius: 8%;
   color: rgba(30, 39, 46, 0.7);
+
+
 }
 .project-button:hover,
 .project-button:active,
@@ -292,8 +294,11 @@
   .project-button {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-left: 380px;
+    margin: auto;
+
+
 
     width: 8rem;
     font-size: 1.4rem;
