--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+
 }
 
 .about-heading {
@@ -17,6 +18,7 @@
 .about-info {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .about .about-info .about-desc {
@@ -26,14 +28,30 @@
   margin-top: -0.2rem;
   display: flex;
   align-items: center;
-
-
 }
+
+@media (max-width: 690px) {
+  .about {
+    padding: 2rem 3rem;
+  }
+
+  .about-heading {
+    font-size: 2.5rem;
+  }
+
+  .about .about-info .about-desc {
+    font-size: 1.5rem;
+    max-width: 100%;
+    line-height: 1.8rem;
+  }
+
+  .about .about-img .about-img-wrapper img {
+    width: 80%;
+  }
+}
+
 .about .about-img {
   display: block;
-
-
-
 }
 
 .about .about-img .about-img-wrapper {
